# kanji

./: .gitignore  Cargo.toml  kanji.json  kanji_display.html
src/: kanji.json  main.rs
